--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ config/master.key
 .env
 
 ## Environment normalization:
-/.bundle
+!/.bundle/config
 /vendor/bundle
 
 # these should all be checked in to normalize the environment:
